# MGP_Quiz

./: .flake8  .gitignore  Makefile  Readme.md  docker-compose.yml  pyrightconfig.json
api/: Dockerfile
api/prod/: app.py  auth.py  config.py  main.py  pyproject.toml  requirements.txt
api/prod/database/: __init__.py  _config.py  _engine.py  _models.py  _session.py  models.py
api/prod/router/: __init__.py  _admin.py  _student.py  _user.py
api/prod/schema/: __init__.py  _quiz.py  _user.py  quiz.py  user.py
test/: Dockerfile
test/prod/: main.py  pyproject.toml  requirements.txt
test/prod/json/: 0_POST_quiz_0.json  0_POST_quiz_1.json
