[project]
name = "test"
version = "0.1.0"
description = ""
authors = [
    {name = "Mingi Park",email = "mgkid3310@naver.com"}
]
readme = ""
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
